--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Todos up in here</h1>
+
+    <form action="/todos/createTodo" method='POST'>
+        <input type="text" placeholder="Enter Todo Item" name='todoItem'>
+        <input type="submit">
+    </form>
 </body>
 </html>
