--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,77 @@
     padding:0;
 
 }
-body{
+/* body{
     background-color: antiquewhite;
-}
+} */
 
 .completed{
      text-decoration: line-through;
+}
+h1{
+color: rgb(247, 136, 121);
+padding: 10px;
+text-align: center;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;   
+}
+
+h2{
+    color: rgb(85, 172, 243);
+padding: 10px;
+text-align: center;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+}
+
+form {
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+form>input {
+    padding: 10px;
+    outline: none;
+    border: none;
+    font-size: 20px;
+    /* border-bottom: 1px solid black; */
+    background: lightgray;
+}
+
+form>input:focus{
+    background-color: none;
+    border-bottom: 2px solid  rgb(247, 136, 121);
+    
+}
+
+form>input.submit{
+    border:1px solid black;
+    background:rgb(175, 174, 174)
+}
+
+ul{   
+width: 80%;
+margin: auto auto;    
+}
+
+ul li {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 7px;
+    padding: 5px 10px;
+    background-color: #f79453;
+    font-family: Arial, Helvetica, sans-serif;
+    box-shadow: 5px 5px 5px #aaa;
+}
+li:nth-child(odd) {
+    background-color: rgb(85, 172, 243);
+  }
+  li:nth-child(even) {
+    background-color: rgb(247, 136, 121);
+  }
+
+.del{
+    background:rgb(175, 174, 174)  
 }
