--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,3 +77,17 @@ li:nth-child(odd) {
 .del{
     background:rgb(175, 174, 174)  
 }
+
+a{
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 650px){
+    form>input {
+        padding: 5px;
+        font-size: 18px;
+               
+    }
+ 
+}
